@@ -23,6 +23,7 @@
 - NEW: Ability to cancel the "patch all" function. (Stefan)
 - NEW: Option to disable the context menu for specific paths. (Stefan)
 - NEW: Extended the IBugTraqProvider. See issue #428 for details. (Stefan)
+- NEW: The status cache handles "runas" now better. (Stefan)
 - CHG: The bug-ID column width in the log dialog is now limited 
        to 200 pixels. (Stefan)
 - CHG: The right-drag context menu now only shows "Export" if a versioned
